Code cleaning and car horn sounds

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <script src="gameConfig.js"></script>
 <script src="levelController.js"></script>
 <script src="collisionDetection.js"></script>
-<script src="pothole.js"></script>
-<script src="oil.js"></script>
+<script src="obstacle.js"></script>
 <script src="car.js"></script>
 <script src="traffic.js"></script>
 <script src="scenario.js"></script>
