Putting trees in scenario

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <script src="obstacle.js"></script>
 <script src="car.js"></script>
 <script src="traffic.js"></script>
+<script src="tree.js"></script>
 <script src="scenario.js"></script>
 <script src="score.js"></script>
 <script src="game.js"></script>
